[package]
name = "poeltl_scoreboard_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
chrono = "0.4.19"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]
version = "0.10.10"